# omino-project

./: Cargo.toml  sqlite3.lib  visits.db
src/: main.rs
src/database/: db.rs
src/handlers/: mod.rs  visits.rs
