[package]
name = "qr-giulia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = "0.32"
dirs = "4.0"
dotenv = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
env_logger = "0.10"